@@ -1,3 +1,8 @@
+2006-10-07  Paolo Borelli  <pborelli@katamail.com>
+
+	* plugins/filebrowser/gedit-file-browser-store.c:
+	properly collate filenames.
+
 2006-10-01  Paolo Maggi  <paolo@gnome.org>
 
 	* gedit/gedit-document-saver.c (copy_file_data)
